All functionalities added for the game

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <div>
-        <h3>Score:<span id="score"></span></h3>
+        <h3 class="score">Score:<span id="score"></span></h3>
         <div class="board"></div>
       </div>
     </div>
