--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   </head>
   <body>
     <div class="container">
-      <div>
+      <div class="block">
         <h3 class="score">Score:<span id="score"></span></h3>
+        <h3 class="won"></h3>
         <div class="board"></div>
       </div>
     </div>
